# SAP1

./: Pipfile  firmware_builder.py  firmware_reader.py  poc.asm  pyproject.toml  software_compiler.py
emulator/: __init__.py
emulator/hardware/: clocked_component.py  register.py
sap1/: types.py
sap1/compiler/: __init__.py  parser.py  word.py
sap1/emulator/: __init__.py  __main__.py  _runtime.py  _screens.py
sap1/emulator/hardware/: __init__.py  alu.py  bus_component.py  clocked_component.py  control_unit.py  instruction_register.py  mar.py  memory.py  program_counter.py  register.py
sap1/emulator/hardware/component_bases/: __init__.py  bus_component.py  clocked_component.py  component.py
sap1/firmware/: __init__.py
sap1/instruction_set/: __init__.py  _instruction.py  instructions.py  microcode.py  types.py  validators.py
tests/: conftest.py
tests/components/: test_alu.py  test_instruction_register.py  test_mar.py  test_program_counter.py  test_ram.py  test_register.py
